add endpoints to delete alerts
